# PyAnimeList

./: .env.example  .gitignore  README.md  comparison_data.py  conf.py  convert_mal_to_json.py  download_mal_html.py  download_shikimori_history.py  dto.py  pyproject.toml  requirements.txt  settings.py
data/source/shikimori/: ahmpro_info.json  ahmpro_user_rate.json
